[package]
name = "nu_plugin_ulid"
version = "0.1.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
description = "Professional ULID (Universally Unique Lexicographically Sortable Identifier) utilities plugin for Nushell"
license = "BSD-3-Clause"
repository = "https://github.com/nushell-works/nu_plugin_ulid"
homepage = "https://github.com/nushell-works/nu_plugin_ulid"
documentation = "https://docs.rs/nu_plugin_ulid"
keywords = ["nushell", "plugin", "ulid", "uuid", "identifier"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.81.0"

[[bin]]
name = "nu_plugin_ulid"
path = "src/main.rs"

[lib]
name = "nu_plugin_ulid"
path = "src/lib.rs"

[dependencies]
nu-plugin = "0.95.0"
nu-protocol = "0.95.0"

# Demo command dependencies for Phase 1.2
ulid = { version = "1.1", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base32 = "0.5"
hex = "0.4"
sha2 = "0.10"
blake3 = "1.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
nu-test-support = "0.95.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
