[package]
name = "nu_plugin_ulid"
version = "0.1.0"
edition = "2021"
authors = ["John Ky <newhoggy@gmail.com>"]
description = "Professional ULID (Universally Unique Lexicographically Sortable Identifier) utilities plugin for Nushell"
license = "BSD-3-Clause"
repository = "https://github.com/nushell-works/nu_plugin_ulid"
homepage = "https://github.com/nushell-works/nu_plugin_ulid"
documentation = "https://docs.rs/nu_plugin_ulid"
keywords = ["nushell", "plugin", "ulid", "uuid", "identifier"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.81.0"

[[bin]]
name = "nu_plugin_ulid"
path = "src/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[lib]
name = "nu_plugin_ulid"
path = "src/lib.rs"

[dependencies]
nu-plugin = "0.106.1"
nu-protocol = "0.106.1"

# Production dependencies for Phase 3+
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
blake3 = "1.8.2"
sha2 = "0.10.9"
base32 = "0.5.1"
hex = "0.4.3"
uuid = { version = "1.18.0", features = ["v4"] }
base64 = "0.22.1"

[dev-dependencies]
nu-test-support = "0.106.1"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
