[package]
name = "nu_plugin_nw_ulid"
version = "0.1.2"
edition = "2024"
authors = ["John Ky <newhoggy@gmail.com>"]
description = "Production-grade ULID (Universally Unique Lexicographically Sortable Identifier) utilities plugin for Nushell with cryptographically secure operations, enterprise-grade security, and streaming support"
license = "BSD-3-Clause"
repository = "https://github.com/nushell-works/nu_plugin_nw_ulid"
homepage = "https://github.com/nushell-works/nu_plugin_nw_ulid"
documentation = "https://docs.rs/nu_plugin_nw_ulid"
keywords = ["nushell", "ulid", "uuid", "identifier", "plugin"]
categories = ["command-line-utilities", "development-tools", "cryptography", "data-structures"]
readme = "README.md"
rust-version = "1.89.0"
include = [
    "src/**/*",
    "docs/**/*",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "Cargo.toml",
    "benches/**/*"
]
exclude = [
    ".github/",
    ".git/",
    "target/",
    "*.swp",
    "*.swo",
    ".DS_Store",
    "test_data/",
    "scripts/",
    ".env*",
    "*.log"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "nu_plugin_nw_ulid"
path = "src/main.rs"

[[bench]]
name = "performance_benchmarks"
harness = false

[lib]
name = "nu_plugin_nw_ulid"
path = "src/lib.rs"

[dependencies]
nu-plugin = "0.110.0"
nu-protocol = "0.110.0"

# Production dependencies for Phase 3+
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
blake3 = "1.8.2"
sha2 = "0.10.9"
base32 = "0.5.1"
hex = "0.4.3"
uuid = { version = "1.19.0", features = ["v4"] }
base64 = "0.22.1"

[dev-dependencies]
nu-test-support = "0.110.0"
criterion = { version = "0.7", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
